// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PalletManagement Navigator Renders and Calls the Kebab Menu button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="pallet_menu"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingRight": 10,
      }
    }
  >
    <Image
      source=""
      style={
        {
          "height": 25,
          "marginRight": 10,
          "width": 25,
        }
      }
    />
  </View>
</View>
`;

exports[`PalletManagement Navigator Renders and Calls the Manual Scan Button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="barcode-scan"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 15,
      }
    }
  >
    <Icon
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</View>
`;

exports[`PalletManagement Navigator Renders the PalletManagement Navigator 1`] = `
<StackNavigator
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    name="PalletManagementHome"
    options={
      {
        "headerRight": [Function],
        "headerTitle": [Function],
      }
    }
  />
  <Screen
    component={[Function]}
    name="ManagePallet"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PALLET.MANAGE_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="CombinePallets"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PALLET.COMBINE_PALLETS" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`PalletManagement Navigator Renders the PalletManagement Navigator when create pallet is true 1`] = `
<StackNavigator
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    name="PalletManagementHome"
    options={
      {
        "headerRight": [Function],
        "headerTitle": [Function],
      }
    }
  />
  <Screen
    component={[Function]}
    name="ManagePallet"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PALLET.MANAGE_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="CombinePallets"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PALLET.COMBINE_PALLETS" translation]",
      }
    }
  />
</StackNavigator>
`;
